--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,11 +17,13 @@ header nav ul {
 	list-style: none;
 	display: flex;
 	justify-content: center;
+	align-items: center;
 	padding: 0;
 }
 
 header nav ul li {
 	margin: 0 1.5rem;
+	height: fit-content;
 }
 
 header nav ul li a {
@@ -33,6 +35,35 @@ header nav ul li a {
 
 header nav ul li a:hover {
 	color: #bb86fc;
+}
+
+header nav .menu-icon {
+	width: 30px;
+	height: 20px;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	span {
+		background-color: #e0e0e0;
+
+		display: block;
+		width: 100%;
+		height: 2px;
+	}
+}
+header nav .menu-icon.clicked {
+	.span-1 {
+		transform: rotate(34deg) translate(5px, 6px);
+	}
+	.span-2 {
+		transform: rotate(-34deg) translate(5px, -8px);
+	}
+	.span-3 {
+		display: none;
+	}
+}
+@media (max-width: 500px) {
 }
 
 .container {
@@ -54,13 +85,6 @@ form {
 	display: flex;
 	flex-direction: column;
 	padding: 50px;
-	input {
-		width: 100%;
-	}
-}
-
-form div {
-	margin-bottom: 1.5rem;
 }
 
 form label {
@@ -74,13 +98,24 @@ form input,
 form select,
 form button {
 	width: 100%;
-	padding: 0.75rem;
+	padding: 0.75rem 0;
 	border: 1px solid #333;
 	border-radius: 4px;
 	font-size: 1rem;
 	background-color: #333;
 	color: rgb(224, 224, 224);
 	transition: border-color 0.3s ease;
+}
+
+@media (min-width: 700px) {
+	form {
+		align-items: center;
+	}
+	form input,
+	form select,
+	form button {
+		width: 500px;
+	}
 }
 
 form input:focus,
@@ -95,6 +130,7 @@ form button {
 	border: none;
 	cursor: pointer;
 	transition: background-color 0.3s ease;
+	margin-top: 30px;
 }
 
 form button:hover {
@@ -109,7 +145,4 @@ form button:hover {
 
 .chart-container {
 	margin-top: 2rem;
-}
-
-.home {
 }
