Refactor Header component to TypeScript; enhance mobile menu functionality and styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,7 +63,15 @@ header nav .menu-icon.clicked {
 		display: none;
 	}
 }
-@media (max-width: 500px) {
+
+.menu-small {
+	left: 45%;
+	background-color: #1f1f1f;
+	ul {
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+	}
 }
 
 .container {
