--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,162 +1,192 @@
 /* Dark Theme Style */
 /* Reset some default styles */
 
+@font-face {
+  font-family: "PlaywriteVN-VariableFont_wght";
+  src: url("../../public/fonts/PlaywriteVN-VariableFont_wght.ttf")
+    format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
-	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-	background-color: #121212;
-	color: #e0e0e0;
-	line-height: 1.6;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #121212;
+  color: #e0e0e0;
+  line-height: 1.6;
+  overflow-x: hidden;
 }
 
 header {
-	background-color: #1f1f1f;
-	color: #e0e0e0;
-	padding: 1rem 0;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  background-color: #1f1f1f;
+  color: #e0e0e0;
+  padding: 1rem 0;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 header nav ul {
-	list-style: none;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
 }
 
 header nav ul li {
-	margin: 0 1.5rem;
-	height: fit-content;
+  margin: 0 1.5rem;
+  height: fit-content;
 }
 
 header nav ul li a {
-	color: #e0e0e0;
-	text-decoration: none;
-	font-weight: 600;
-	transition: color 0.3s ease;
+  color: #e0e0e0;
+  text-decoration: none;
+  font-weight: 600;
+  transition: color 0.3s ease;
 }
 
 header nav ul li a:hover {
-	color: #bb86fc;
+  color: #bb86fc;
 }
 
 header nav .menu-icon {
-	width: 30px;
-	height: 20px;
-	margin: 0 auto;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	span {
-		background-color: #e0e0e0;
-
-		display: block;
-		width: 100%;
-		height: 2px;
-	}
+  width: 30px;
+  height: 20px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  span {
+    background-color: #e0e0e0;
+    display: block;
+    width: 100%;
+    height: 2px;
+  }
 }
 header nav .menu-icon.clicked {
-	.span-1 {
-		transform: rotate(34deg) translate(5px, 6px);
-	}
-	.span-2 {
-		transform: rotate(-34deg) translate(5px, -8px);
-	}
-	.span-3 {
-		display: none;
-	}
+  .span-1 {
+    transform: rotate(34deg) translate(5px, 6px);
+  }
+  .span-2 {
+    transform: rotate(-34deg) translate(5px, -8px);
+  }
+  .span-3 {
+    display: none;
+  }
 }
 
 .menu-small {
-	left: 45%;
-	background-color: #1f1f1f;
-	ul {
-		display: flex;
-		flex-direction: column;
-		width: 100%;
-	}
+  background-color: #1f1f1f;
+  border: 1px solid #9a67ea;
+  position: absolute;
+  margin-top: 19px;
+  width: 100%;
+  min-width: 300px;
+  right: -447%;
+  ul {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
 }
 
 .container {
-	max-width: 800px;
-	margin: 2rem auto;
-	padding: 2rem;
-	background-color: #1f1f1f;
-	border-radius: 8px;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  max-width: 800px;
+  margin: 2rem auto;
+  padding: 2rem;
+  background-color: #1f1f1f;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 h1 {
-	margin-bottom: 1.5rem;
-	text-align: center;
-	color: #bb86fc;
+  margin-bottom: 1.5rem;
+  text-align: center;
+  color: #bb86fc;
 }
 
 form {
-	display: flex;
-	flex-direction: column;
-	padding: 50px;
+  display: flex;
+  flex-direction: column;
+  padding: 50px;
 }
 
 form label {
-	display: block;
-	margin-bottom: 0.5rem;
-	font-weight: 600;
-	color: #e0e0e0;
+  display: block;
+  margin-bottom: 0.5rem;
+  font-weight: 600;
+  color: #e0e0e0;
 }
 
 form input,
 form select,
-form button {
-	width: 100%;
-	padding: 0.75rem 0;
-	border: 1px solid #333;
-	border-radius: 4px;
-	font-size: 1rem;
-	background-color: #333;
-	color: rgb(224, 224, 224);
-	transition: border-color 0.3s ease;
+form button,
+form textarea {
+  width: 100%;
+  padding: 0.75rem 0;
+  border: 1px solid #333;
+  border-radius: 4px;
+  font-size: 1rem;
+  background-color: #333;
+  color: rgb(224, 224, 224);
+  transition: border-color 0.3s ease;
 }
 
 @media (min-width: 700px) {
-	form {
-		align-items: center;
-	}
-	form input,
-	form select,
-	form button {
-		width: 500px;
-	}
+  form {
+    align-items: center;
+  }
+  form input,
+  form select,
+  form button {
+    width: 500px;
+  }
 }
 
 form input:focus,
 form select:focus {
-	border-color: #bb86fc;
-	outline: none;
+  border-color: #bb86fc;
+  outline: none;
 }
 
 form button {
-	background-color: #bb86fc;
-	color: #121212;
-	border: none;
-	cursor: pointer;
-	transition: background-color 0.3s ease;
-	margin-top: 30px;
+  background-color: #bb86fc;
+  color: #121212;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-top: 30px;
 }
 
 form button:hover {
-	background-color: #9a67ea;
+  background-color: #9a67ea;
 }
 
 .error {
-	color: #cf6679;
-	text-align: center;
-	margin-top: 1rem;
+  color: #cf6679;
+  text-align: center;
+  margin-top: 1rem;
 }
 
 .chart-container {
-	margin-top: 2rem;
+  margin-top: 2rem;
 }
 
 .centered-table {
-	margin: 0 auto;
+  margin: 0 auto;
+}
+
+.results-table {
+  td,
+  th {
+    overflow-x: auto;
+  }
+}
+
+.top-part {
+  display: flex;
+  justify-content: space-around;
+  p {
+    font-family: "PlaywriteVN-VariableFont_wght", sans-serif;
+  }
 }
